fixed typoes, expanded about

--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -26,7 +26,7 @@
 					{{#if currentUser}}
 					<li><a href="{{pathFor 'myrecipes'}}">My Recipes</a></li>
 					<!--<li><a href="{{pathFor 'people'}}">Users</a></li>-->
-					<li><a href="/profile/{{userid}}">My Porfile</a></li>
+					<li><a href="/profile/{{userid}}">My Profile</a></li>
 					{{else}}
 					<li><p class="navbar-text">Please log in for more</p></li>
 					{{/if}}
