--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -23,6 +23,8 @@
 		      	<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li><a href="{{pathFor 'allrecipes'}}">All Recipes</a></li>
+					<li><a href="{{pathFor 'filter'}}">Filter</a></li>
+					<li><a href="{{pathFor 'stats'}}">Statistics</a></li>
 					{{#if currentUser}}
 					<li><a href="{{pathFor 'myrecipes'}}">My Recipes</a></li>
 					<!--<li><a href="{{pathFor 'people'}}">Users</a></li>-->
