--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,8 +1,7 @@
 <template name="layout">
-	<div class="container">
 		
 		<!-- Here is the standard Bootstrap code for a Navigation bar taken directly from getbootstrap.com/components -->
-		<nav class="navbar navbar-inverse">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -21,16 +20,14 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
-					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li><a href="{{pathFor 'allrecipes'}}">All Recipes</a></li>
 					<li><a href="{{pathFor 'filter'}}">Filter</a></li>
-					<li><a href="{{pathFor 'stats'}}">Statistics</a></li>
 					{{#if currentUser}}
 					<li><a href="{{pathFor 'myrecipes'}}">My Recipes</a></li>
 					<!--<li><a href="{{pathFor 'people'}}">Users</a></li>-->
 					<li><a href="/profile/{{userid}}">My Profile</a></li>
 					{{else}}
-					<li><p class="navbar-text">Please log in for more</p></li>
+					<li><p class="navbar-text">Please log in!</p></li>
 					{{/if}}
 				</ul>
 			    <ul class="nav navbar-nav navbar-right">
@@ -50,8 +47,11 @@
 			<span id="interim_span" class="interim"></span> 
 		</div>
 		
+	<div class="container">
 		<!-- Here is where the actual content of the page gets inserted by the router! -->
 		{{> yield}}
 		
 	</div>
+	
+	{{> footer}}
 </template>
