--- a/client/layout/footer.html
+++ b/client/layout/footer.html
@@ -5,6 +5,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li><a href="{{pathFor 'stats'}}">Statistics</a></li>
+					<li><a href="{{pathFor 'game'}}">Game</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><p class="navbar-text">&copy; <a href="http://jessicahuynh.info/" class="navbar-link">Jessica Huynh</a> 2015</p></li>
